@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.tvgolo"
        name="OKGoals"
-       version="1.0.2"
+       version="1.0.4"
        provider-name="fightnight">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
 		<import addon="script.module.urlresolver"  version="1.0.5"/> 
+		<import addon="script.module.requests"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="default.py">
         <provides>video</provides>
